# Arch-Chan-AI-assistant

./: .SRCINFO  Arch-Chan-Lite.Modelfile  Arch-Chan.Modelfile  CHANGELOG.md  LICENSE  MANIFEST.in  PKGBUILD  README.md  check_installation.py  config.ini  config.py  debug_ollama.py  diagnose.py  install_arch_chan.sh  main.py  pyproject.toml  requeriments.txt  setup.py  setup_models.py  structure.txt  test_ollama.py  update_arch_chan.sh  uptate_manager.py  worker.py
configs/backups/: config_backup_20251103_180013.ini  config_backup_20251103_180413.ini  config_backup_20251103_180442.ini
core/: application.py  config_manager.py  dependency_checker.py  state_manager.py
models/: chat_models.py  config_models.py  system_models.py
services/: command_executor.py  ollama_client.py  speech_service.py  system_monitor.py
ui/: main_window.py
ui/components/: chat_panel.py  side_panel.py  status_bar.py  toolbar.py
ui/dialogs/: config_dialog.py  sudo_dialog.py
ui/themes/: arch_theme.py
utils/: constants.py  file_utils.py  logger.py  validators.py
workers/: base_worker.py  chat_worker.py  thread_manager.py  voice_worker.py
